# libsquid

./: CMakeLists.txt  INSTALL  Makefile  README.md  libsquid.h  libsquid.pc.in  libsquid_base.c  libsquid_projections.c  libsquid_utils.c
pysquid/: pysquid.i  setup.py
